# abs-sync

./: .env.example  .gitignore  AUDIOBOOKSHELF_API.md  README.md  SPEC.md  pyproject.toml
abs_sync/: __init__.py  __main__.py  cli.py  config.py  models.py  sync.py
abs_sync/client/: __init__.py  abs_client.py  destination.py  source.py
abs_sync/services/: __init__.py  downloader.py  metadata.py  sanitizer.py
abs_sync/utils/: __init__.py  logging.py
